--- a/style.css
+++ b/style.css
@@ -3,67 +3,87 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
-  background-color: #262626;
-}
+
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 50px;
 }
-section {
-  width: 100%;
-  height: 700px;
-  display: flex;
-  align-items: center;
-}
-.sectionA {
+
+.Container {
+  max-width: 100vw;
+  height: 100%;
   background-color: #000000;
 }
 
-nav {
+header {
+  font-family: 'Montserrat', sans-serif;
   width: 100%;
-  height: 729px;
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 20px;
+  border-radius: 40px;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.4)),
+    url(./assets/twoHole.jpg);
+}
+nav {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: column;
+  z-index: 2;
+  width: 650px;
+  height: 855px;
+}
+
+section {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-right: 20px;
+  background: #262626;
+}
+.sectionA {
+  display: flex;
+  justify-content: flex-end;
+  background-color: #000000;
 }
 
 .fundoHeader {
-  width: 100%;
-  height: 730px;
+  height: 101%;
   overflow: hidden;
 }
 
 #fundoHeader {
   width: 100%;
-  height: 729px;
+  height: 101%;
   filter: brightness(0.6);
 }
 .port {
   position: fixed;
   margin-top: 20px;
   margin-left: 20px;
-  margin-bottom: 350px;
   font-size: 35px;
   font-weight: 200;
   color: #fff;
+  z-index: 2;
 }
+
 b {
   color: orangered;
   font-weight: 300;
 }
 .boxName {
-  font-family: 'Montserrat', sans-serif;
-  width: 570px;
-  z-index: 1;
-  position: absolute;
+  width: 410px;
+  height: 645px;
 }
 ul {
-  font-family: 'Montserrat', sans-serif;
-  z-index: 2;
   font-weight: 300;
   font-size: 20px;
   color: #fff;
+  margin-top: 17px;
   position: fixed;
-  margin-top: 20px;
-  margin-left: 55%;
 }
 
 li {
@@ -73,92 +93,64 @@ li {
   list-style: none;
   display: inline-block;
 }
-
 li:hover {
   text-decoration: underline;
 }
-
 .name {
   color: #fff;
   margin-left: 20px;
-  margin-top: 375px;
+  margin-top: 540px;
   font-size: 40px;
   font-weight: 400;
 }
-
 #title {
   font-size: 30px;
   font-weight: 500;
   color: #fff;
   margin-left: 20px;
 }
-
-.hrE {
-  background: rgb(255, 81, 0);
-  width: 600px;
-  height: 1px;
-  border: none;
-  border-radius: 10px;
-}
-
 .boxSobreMim {
-  width: 850px;
-  height: 500px;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 30px;
+  width: 800px;
+  height: 450px;
+  display: flex;
+  justify-content: space-around;
   margin-top: 20px;
-  margin-left: 780px;
-  padding-left: 20px;
   padding-top: 100px;
-  padding-bottom: 10px;
+
   font-weight: 500;
   color: #fff;
   border-radius: 20px;
   box-shadow: 3px 3px 15px rgb(255, 81, 0, 5);
   background-color: rgb(27, 27, 27);
 }
-
 #eu {
   width: 200px;
   border-radius: 100px;
-  margin: -245px 0px 0px 600px;
-  position: absolute;
   box-shadow: 2px 4px 5px rgb(0, 0, 0, 0.5);
 }
-
-.hrD {
-  background: rgb(255, 81, 0);
-  margin-left: 64.4%;
-  width: 600px;
-  height: 1px;
-  border: none;
-  border-radius: 10px;
-}
-p {
-  font-family: 'Roboto Condensed', sans-serif;
+.textEu {
   width: 400px;
-  font-weight: 300;
-  font-size: 20px;
-  margin-top: 15px;
-  line-height: 30px;
+  margin-top: 10px;
 }
-
-.swiper {
+.projects {
   width: 1160px;
   height: 450px;
   border-radius: 20px;
-  margin-top: 20px;
-  margin-left: 290px;
+
   box-shadow: 3px 3px 15px rgb(255, 81, 0, 0.9);
   background-color: rgb(27, 27, 27);
 }
-
-.swiper-wrapper {
+.projects-wrapper {
   max-width: 1160px;
   padding-left: 10px;
   display: flex;
   align-items: center;
 }
-
-.swiper-slide {
+.project-slider {
   height: 415px;
   border-radius: 15px;
   display: flex;
@@ -167,6 +159,9 @@ p {
   box-shadow: 1px 3px 9px rgb(0, 0, 0);
   background: rgb(39, 39, 39);
   cursor: pointer;
+}
+.arrow {
+  color: orangered;
 }
 
 img {
@@ -190,25 +185,45 @@ a:hover {
   height: 100px;
   padding-left: 30px;
 }
-
 .boxCursos {
-  width: 850px;
-  height: 500px;
-  margin-top: 20px;
-  margin-left: 20px;
-  padding-left: 20px;
-  padding-top: 100px;
-  padding-bottom: 10px;
-  font-weight: 500;
-  color: #fff;
+  width: 800px;
+  height: 450px;
   border-radius: 20px;
   box-shadow: 3px 3px 15px rgb(255, 81, 0, 5);
-  background-color: rgb(27, 27, 27);
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url(./assets/gifCode.gif);
+  background-size: 500px;
+  background-repeat: no-repeat;
+
+  background-position: center;
+
+  background-size: cover;
+}
+
+.cursosWrapper {
+  display: flex;
+  align-items: center;
+}
+.cursosSlider {
+  font-family: 'Montserrat', sans-serif;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 100;
+  padding: 15px;
+  width: 500px;
+  margin-top: 15px;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  box-shadow: 1px 3px 9px rgb(0, 0, 0);
+  background: rgb(39, 39, 39);
 }
 
 .boxCurriculo {
-  width: 820px;
-  height: 500px;
+  width: 800px;
+  height: 450px;
   margin-top: 30px;
   margin-left: 20px;
   overflow: hidden;
@@ -233,7 +248,6 @@ a:hover {
   border-radius: 15px;
   box-shadow: 1px 3px 9px rgb(0, 0, 0);
 }
-
 .curriculo:hover {
   text-decoration: none;
   background-color: rgb(243, 110, 61);
@@ -242,12 +256,12 @@ a:hover {
 .curriculo:active {
   background-color: #fff;
 }
-
 .imgStars {
   margin-left: -180px;
   transform: scaleX(-1);
   width: 1000px;
   height: 600px;
+  margin-top: -60px;
   border: none;
   filter: brightness(0.6);
 }
@@ -271,12 +285,11 @@ a:hover {
     transform: translateX(100px);
   }
 }
-
 .boxHabilidades {
-  width: 850px;
-  height: 500px;
+  width: 800px;
+  height: 450px;
   margin-top: 20px;
-  margin-left: 760px;
+  margin-left: 20px;
   padding-left: 20px;
   padding-top: 100px;
   padding-bottom: 10px;
@@ -287,55 +300,52 @@ a:hover {
   background-color: black;
   overflow: hidden;
 }
-
 .boxIcon {
-  margin-top: 100px;
-  margin-left: 85px;
-  width: 820px;
-  height: 400px;
-  display: flex;
+  margin-top: 30px;
+  margin-left: 150px;
+  width: 455px;
+  height: 250px;
   position: absolute;
   z-index: 1;
 }
-
 .iconHabil {
   width: 80px;
   height: 80px;
   border: none;
   margin-right: 30px;
 }
-
 .iconHabil:hover {
   cursor: pointer;
   transition: 0.4s;
-  margin-top: 15px;
+  transform: translateY(15px);
 }
 .backHabili {
   width: 103%;
-  height: 131%;
-  margin-top: -12%;
+  height: 133%;
+  margin-top: -13%;
   margin-left: -3%;
 }
-
 #backHabili {
   width: 100%;
   height: 100%;
   filter: brightness(0.6);
   border: none;
 }
+
 #sectionForm {
-  height: 750px;
+  height: 820px;
   display: flex;
   flex-direction: column;
 }
 .boxForm {
   margin-top: 60px;
+  margin-left: 70px;
   border-radius: 110px 0px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 1450px;
-  height: 600px;
+  width: 90%;
+  height: 645px;
   background-color: rgb(19, 19, 19);
 }
 
@@ -347,7 +357,6 @@ h1 {
   margin-left: 0px;
   font-size: 35px;
 }
-
 form {
   font-family: 'Roboto Condensed', sans-serif;
   width: 960px;
@@ -357,7 +366,6 @@ form {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
 }
-
 .inputUm {
   color: aliceblue;
   margin-top: -10px;
@@ -366,7 +374,6 @@ form {
   grid-column-end: 2;
   grid-row-start: 2;
 }
-
 .inputDois {
   color: aliceblue;
   margin-top: -10px;
@@ -374,7 +381,6 @@ form {
   grid-column-end: 2;
   grid-row-start: 2;
 }
-
 input {
   font-weight: 500;
   font-size: 16px;
@@ -392,12 +398,12 @@ input:focus {
   outline-width: 2px;
   color: rgb(255, 68, 0);
 }
+
 input:hover {
   outline-width: 2px;
   outline-style: solid;
   outline-color: rgb(255, 68, 0);
 }
-
 textarea {
   font-weight: 500;
   font-size: 16px;
@@ -412,20 +418,17 @@ textarea {
   grid-column-start: 1;
   grid-column-end: 3;
 }
-
 textarea:focus {
   outline-style: solid;
   outline-color: rgb(255, 68, 0);
   outline-width: 2px;
   color: rgb(255, 68, 0);
 }
-
 textarea:hover {
   outline-width: 2px;
   outline-style: solid;
   outline-color: rgb(255, 68, 0);
 }
-
 .box-bt {
   display: flex;
   flex-direction: row;
@@ -442,11 +445,12 @@ textarea:hover {
   cursor: pointer;
   width: 90px;
 }
-
 .inputbt:active {
   opacity: 0.7;
 }
 .boxRedes {
+  width: 210px;
+  height: 85px;
   margin-top: 30px;
   display: flex;
   background: #262626;
@@ -454,10 +458,42 @@ textarea:hover {
 .redesIcon {
   cursor: pointer;
   width: 30px;
-  margin-right: 30px;
+  margin-right: 35px;
   border: none;
 }
 .redesIcon:hover {
-  opacity: 0.5;
+  transform: scale(1.5);
   transition: 0.2s;
+}
+@media screen and (max-width: 500px) {
+  .Container {
+    width: 100%;
+  }
+  header {
+    display: flex;
+    justify-content: space-between;
+  }
+  nav {
+    width: 380px;
+    height: 280px;
+  }
+  ul {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20%;
+    text-align: right;
+    position: relative;
+  }
+  li {
+    margin-bottom: 20px;
+  }
+  .port {
+    position: relative;
+  }
+  .name {
+    font-size: 30px;
+  }
+  #title {
+    font-size: 17px;
+  }
 }
