--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
   box-sizing: border-box;
 }
 
-html {
+/*html {
   scroll-behavior: smooth;
-}
+}*/
 
 .Container {
   max-width: 100vw;
@@ -335,11 +335,12 @@ a:hover {
 #sectionForm {
   height: 820px;
   display: flex;
+  justify-content: center;
   flex-direction: column;
 }
 .boxForm {
   margin-top: 60px;
-  margin-left: 70px;
+  margin-left: 30px;
   border-radius: 110px 0px;
   display: flex;
   justify-content: center;
