--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ li:hover {
 .name {
   width: 409px;
   color: #fff;
-  margin-left: 20px;
+  margin-bottom: 50px;
   font-size: 40px;
   font-weight: 400;
   padding-left: 20px;
@@ -249,7 +249,7 @@ a:hover {
   border-width: 2px;
   margin-left: 310px;
   margin-top: 100px;
-  padding-top: 8px;
+  padding-top: 10px;
   border-radius: 15px;
   box-shadow: 1px 3px 9px rgb(0, 0, 0);
 }
